# django-structured

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.vscode.yaml
django_structured/: entrypoints.py  options.py  project_utils.py
tests/project_utils/load_modules/: basic_load_modules.yaml  basic_package.yaml  duplicate_name_in_globals.yaml  test_load_modules.py
tests/project_utils/load_modules/basic/: load_modules.yaml  package.yaml
tests/project_utils/load_modules/globals_dict/: django_models.yaml  load_to_globals.yaml  nonrecursive_subpackages.yaml  recursive_subpackages.yaml
tpl/django/app/: apps.py
tpl/django/app/models/: __init__.py
tpl/django/app_default/3.2/admin/: __init__.py
tpl/django/app_default/3.2/models/: __init__.py
tpl/django/project/: asgi.py  settings.py  urls.py
tpl/django/project/settings/base/: core.py  database.py  security.py  structure.py
tpl/django/project_default/3.2/project32/: asgi.py  settings.py  urls.py  wsgi.py
tpl/django/project_default/4.2/project42/: settings.py  urls.py
tpl/django/project_default/5.0/project50/: settings.py  wsgi.py
tpl/python/: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
